2011-09-01  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_dis.c (dt_dis_stmts): Do not loop over the actions
	list.

2011-08-29  Shujing Zhao  <pearly.zhao@oracle.com>

	* runtest.sh: Fix the error when process postprocessor.

2011-08-24  Shujing Zhao  <pearly.zhao@oracle.com>

	* runtest.sh: Fix the typo of runtest-opts.

2011-08-19  Shujing Zhao  <pearly.zhao@oracle.com>

	* runtest.sh: Optimize postprocessor and increase TIMEOUT to 11 since
	some test cases need 10 seconds to finish.

2011-08-09  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile (check): New target.
	* runtest.sh: Exit nonzero on failure.

2011-08-08  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Drop userspace test coverage info into the coverage/
	subdirectory of the test logdir.  Emit test coverage info into the
	logfile and sumfile. Zero test coverage counters.
	* test/.gitignore: New, ignore the log/ subdirectory.

	* README.build-system (name_NOCFLAGS): New, filter out unwanted
	CFLAGS from a target.
	* Makefunctions (cc-dependencies): Implement it.
	* test/triggers/Build (TRIGGERS): Use it to filter out test coverage
	info from triggers.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	test/triggers/testprobe.c: New test script to fire the dt_test
	dtrace test provider's test probe.
	test/triggers/Build: Link it.
	test/dt_test/fired.d: Use it.
	test/dt_test/fired.r: Expected results.

	test/struct/kstat.d: No longer use runtest-opts-override, as it no
	longer exists.

	runtest.sh: .x files return nonzero if failure is expected, not
	zero.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	runtest.sh: Support triggers (in @@trigger options and .t files)
	and a new --execute option.  Postprocess CPU and probe IDs out of
	expected results.  Fix use of call_with_timeout (now named
	run_with_timeout) in cheap subshells (not requiring shell
	reinitialization).  Don't leak monitor state out of
	call_with_timeout.  Fix PASS/FAIL appearance bugs.
